# LightRAG

./: .gitignore
docs/: missing_features.md  pipeline_plan.md
docs/memory_bank/: activeContext.md  document_insertion_plan.md  future_plans.md  implementationPlan.md  implementation_roadmap.md  missing_features.md  productContext.md  progress.md  prompt_plan.md  query_implementation_plan.md  super_lightrag_api_design.md  systemPatterns.md  techContext.md  verification_plan.md  visualization.md
rust/: Cargo.toml  README.md
rust/src/: lib.rs  utils.rs
rust/src/api/: mod.rs
rust/src/embeddings/: cache.rs  mod.rs  ollama.rs  openai.rs
rust/src/llm/: config.rs  context.rs  error.rs  mod.rs  multi_model.rs  provider.rs  rate_limiter.rs  redis_cache.rs  streaming.rs
rust/src/llm/cache/: backend.rs  config.rs  entry.rs  functions.rs  indexeddb.rs  localstorage.rs  memory.rs  memory_backend.rs  metrics.rs  mod.rs  offline.rs  redis.rs  redis_cache.rs  sqlite.rs  tiered.rs  types.rs
rust/src/llm/prompt/: config.rs  mod.rs  template.rs
rust/src/llm/prompt/templates/: mod.rs  rag.rs
rust/src/llm/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
rust/src/llm/providers/litellm/: client.rs  mod.rs
rust/src/llm/providers/litellm/adapters/: anthropic.rs  mod.rs  openai.rs
rust/src/llm/providers/tests/: ollama_tests.rs
rust/src/nano_vectordb/: lib.rs  mod.rs
rust/src/processing/: chunking.rs  cleaning.rs  context.rs  document.rs  formats.rs  keywords.rs  mod.rs  query.rs  status.rs  summary.rs  types.rs  validation.rs
rust/src/processing/entity/: llm.rs  mod.rs
rust/src/processing/summary/: basic.rs  llm.rs  mod.rs
rust/src/storage/: mod.rs
rust/src/storage/graph/: embeddings.rs  graphml.rs  mod.rs  petgraph_storage.rs
rust/src/storage/kv/: doc_status.rs  json.rs  mod.rs
rust/src/storage/vector/: benchmarks.rs  hnsw.rs  mod.rs  optimization.rs
rust/src/types/: embeddings.rs  error.rs  llm.rs  mod.rs
rust/src/util/: compression.rs  mod.rs
rust/src/utils/: mod.rs
rust/static/: sw.js
rust/super_lightrag_data/: hnsw_index.json  kv_store_test.json  kv_store_test_namespace.json
rust/tests/: cache_tests.rs  chunking.rs  doc_status_tests.rs  embedding_tests.rs  embeddings_test.rs  entity_extraction_tests.rs  formats_test.rs  graph_functions_tests.rs  graph_storage_tests.rs  graphml_tests.rs  keyword_tests.rs  kv_storage_tests.rs  litellm_adapter_tests.rs  litellm_client_tests.rs  llm_streaming_tests.rs  llm_summary_tests.rs  mod.rs  nano_vectordb_tests.rs  query_processing_tests.rs  status.rs  summary_tests.rs  validation_tests.rs  vector_storage_hnsw_tests.rs  vector_storage_tests.rs
rust/tests/cache/: memory_tests.rs  mod.rs  redis_tests.rs  sqlite_tests.rs  tiered_tests.rs
rust/tests/providers/: anthropic_tests.rs  mod.rs  multi_model_tests.rs  ollama_tests.rs  openai_tests.rs
rust/tests/resources/: test.docx
