[package]
name = "super-lightrag"
version = "0.1.0"
edition = "2021"
authors = ["MuriloFP"]
description = "A lightweight, cross-platform implementation of LightRAG in Rust"
repository = "https://github.com/MuriloFP/LightRAG"
license = "MIT"

[lib]
name = "super_lightrag"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }

# Async trait support
async-trait = "0.1"

# Added dependencies for nano_vectordb
ndarray = "0.15"
rand = "0.8"
base64 = "0.21"
md5 = "0.7"
bytemuck = "1.12"

# Graph operations
petgraph = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }

# Node embeddings
node2vec = "1.0.1"
nalgebra = "0.32"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"

[features]
default = []
wasm = ["wasm-bindgen"]
mobile = []

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa-foundation = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true 