[package]
name = "super_lightrag"
version = "0.1.0"
edition = "2021"
authors = ["MuriloFP"]
description = "A lightweight, cross-platform implementation of LightRAG in Rust"
repository = "https://github.com/MuriloFP/LightRAG"
license = "MIT"

[lib]
name = "super_lightrag"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression
lz4_flex = "0.11"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = { version = "0.3", features = ["std"] }
parking_lot = "0.12"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.10"

# Utils
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
md5 = "0.7"
bytemuck = "1.14"
once_cell = "1.19"

# Text Processing
html-escape = "0.2"
regex = "1.10"
tiktoken-rs = "0.5"

# Document Format Handling
pdf-extract = "0.8"
docx-rs = "0.4"

# Vector Operations
ndarray = "0.15"
nalgebra = "0.32"
rand = "0.8"

# Graph Operations
petgraph = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
node2vec = "1.0"

# WASM Support (Optional)
wasm-bindgen = { version = "0.2", optional = true }

# Document Hashing
sha2 = "0.10.8"

# Lazy Static
lazy_static = "1.4.0"

# Distributed Caching
redis = { version = "0.23", features = ["tokio-comp", "r2d2"] }
r2d2 = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"
tokio = { version = "1.0", features = ["full", "test-util"] }
approx = "0.5"

[features]
default = []
wasm = ["wasm-bindgen"]
mobile = []

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa-foundation = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true 