[package]
name = "super_lightrag"
version = "0.1.0"
edition = "2021"
authors = ["MuriloFP"]
description = "A lightweight, cross-platform implementation of LightRAG in Rust"
repository = "https://github.com/MuriloFP/LightRAG"
license = "MIT"

[lib]
name = "super_lightrag"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Bytes and IO
bytes = "1.5"

# Compression
lz4_flex = "0.11"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = { version = "0.3", features = ["std"] }
parking_lot = "0.12"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.10"

# Utils
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
md5 = "0.7"
bytemuck = "1.14"
once_cell = "1.19"

# Text Processing
html-escape = "0.2"
regex = "1.10"
tiktoken-rs = "0.5"

# Document Format Handling
pdf-extract = "0.8"
docx-rs = "0.4"

# Vector Operations
ndarray = "0.15"
nalgebra = "0.32"
rand = { version = "0.8", features = ["std"] }

# Graph Operations
petgraph = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
node2vec = "1.0"

# WASM Support (Optional)
wasm-bindgen = { version = "0.2", optional = true }

# Document Hashing
sha2 = "0.10.8"

# Lazy Static
lazy_static = "1.4.0"

# Distributed Caching
redis = { version = "0.23", features = ["tokio-comp", "r2d2"] }
r2d2 = "0.8"
r2d2_redis = "0.14"

# Storage
rusqlite = { version = "0.30", features = ["bundled", "backup", "blob", "array"] }
tokio-rusqlite = "0.5"

# Encryption
aes-gcm = { version = "0.10.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hmac = "0.12.1"
pbkdf2 = "0.12.2"

# Added from the code block
flate2 = "1.0"

# Added dependencies
generic-array = "0.14"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"
tokio = { version = "1.0", features = ["full", "test-util"] }
approx = "0.5"
mockito = "0.31"
wiremock = "0.5"

[features]
default = []
compression = []
wasm = ["wasm-bindgen"]
mobile = []
redis = []

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa-foundation = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true 